--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "toastify-js": "^1.12.0",
     "update": "^0.7.4",
     "vue": "^3.4.21",
+    "vue-i18n": "^11.1.2",
     "vue-router": "^4.3.0",
     "vue-virtual-scroller": "^2.0.0-beta.8"
   },
