--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "tippy.js": "^6.3.7",
     "toastify-js": "^1.12.0",
     "update": "^0.7.4",
+    "vite-plugin-lightningcss": "^0.0.5",
     "vue": "^3.4.21",
     "vue-i18n": "^11.1.2",
     "vue-router": "^4.3.0",
@@ -54,7 +55,7 @@
     "prettier": "^3.2.5",
     "sass": "^1.75.0",
     "stylelint": "^16.3.1",
-    "vite": "^5.2.8",
+    "vite": "6.0.9",
     "vite-plugin-imagemin": "^0.6.1",
     "vite-plugin-pwa": "^0.20.0",
     "vite-plugin-vue-devtools": "^7.0.25",
